--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -125,53 +125,31 @@
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
-
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-<<<<<<< Updated upstream
+       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
-        <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
-=======
-    <li class='list'>
-      <% @items.each do |item| %>
-        <%= link_to item_path(item.id) do %>
-         <div class='item-img-content'>
-           <%= image_tag item.image, class: "item-img"  if item.image.attached? %>
->>>>>>> Stashed changes
-
-            <%# 商品が売れていればsold outの表示 %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
-           <%# //商品が売れていればsold outの表示 %>
-
-<<<<<<< Updated upstream
-        </div>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= "商品名" %>
-          </h3>
-          <div class='item-price'>
-            <span><%= "販売価格" %>円<br>(税込み)</span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
-=======
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.name %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.price %>円<br>(税込み)</span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
+        <% @items.each do |item| %>
+          <%= link_to item_path(item.id) do %>
+          <div class='item-img-content'>
+            <%= image_tag item.image, class: "item-img"  if item.image.attached? %>
+              <%# 商品が売れていればsold outの表示 %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
               </div>
->>>>>>> Stashed changes
+              <%# //商品が売れていればsold outの表示 %>
             </div>
-          </div>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.name %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.price %>円<br>(税込み)</span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
+              </div>
+            </div>
+          <% end %>
         <% end %>
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
@@ -203,6 +181,8 @@
 </div>
 <div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <%= link_to image_tag("camera.png", size: '185x50' ,class: "purchase-btn-icon"), "items_new_path" %>
+  <%= link_to new_item_path do %> 
+    <%= image_tag 'camera.png', size: '185x50' ,class: "purchase-btn-icon" %>
+  <% end %>
 </div>
 <%= render "shared/footer" %>
