--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,35 +6,35 @@
     <h2 class="name">
       <%= @item.name %>
     <div class='item-img-content'>
-      <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
-      <div class='sold-out'>
-        <span>Sold Out!!</span>
-      </div>
-      <%# //商品が売れている場合は、sold outの表示をしましょう。 %>
+        <%= image_tag @item.image ,class:"item-box-img" %>
+        <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
+      　<% if @item.order != nil %>
+          <div class='sold-out'>
+            <span>Sold Out!!</span>
+          </div>
+        <% end %>
+        <%# //商品が売れている場合は、sold outの表示をしましょう。 %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ 999,999,999
+        ¥ <%= @item.price %>
       </span>
-        <%= @item.price %>
       <span class="item-postage">
         (税込) 送料込み
       </span>
     </div>
-
-    <%# ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう%>
-   <% if current_user == @item.user %> 
-     <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-     <p class='or-text'>or</p>
-     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-    <% else %>
-      <%# 商品が売れていない場合はこちらを表示しましょう %>
-      <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
-      <%# //商品が売れていない場合はこちらを表示しましょう %>
-    <% end %>
-    <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
-
+       <%# ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう%>
+      <% if current_user == @item.user %> 
+        <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+        <p class='or-text'>or</p>
+        <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
+      <% elsif @item.order != nil%>
+        <%# 商品が売れていない場合はこちらを表示しましょう %>
+      <% else %>  
+        <%= link_to '購入画面に進む', item_orders_path(@item.id),class:"item-red-btn"%>
+        <%# //商品が売れていない場合はこちらを表示しましょう %>
+      <% end %>
+          <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
     <div class="item-explain-box">
       <span><%= @item.story %></span>
     </div>
