--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -40,7 +40,7 @@
     </div>
     <%# /商品名と商品説明 %>
 
-    <%# 商品の詳細 %> <%#ここから下がプルダウン式%>
+    <%# 商品の詳細 %> 
     <div class="items-detail">
       <div class="weight-bold-text">商品の詳細</div>
       <div class="form">
@@ -82,7 +82,7 @@
         <%= f.collection_select(:delivery_date_id, DeliveryDate.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
       </div>
     </div>
-    <%# /配送について %><%#ここまで上がプルダウン式%>
+    <%# /配送について %>
 
     <%# 販売価格 %>
     <div class="sell-price">
